*Empty MediaWiki Message*

--- a/Березняк_(Теньгушбуе).mw
+++ b/Березняк_(Теньгушбуе).mw
@@ -59,7 +59,7 @@
  |язык сайта              = 
 }}
 
-'''Березняк''' ({{Lang-ru|п. Березняк}}) — эрзянь веле [[Мордовия]]со [[Теньгушбуе]]сэ.
+'''Березняк''' ({{Lang-ru|п. Березняк}}) — эрзянь<ref name="Геопортал РГО">[http://geo13.ru/reestr/object/1332 Геопортал РГО Республика Мордовия: п. Березняк]{{Ref-ru}}</ref> веле [[Мордовия]]со [[Теньгушбуе]]сэ.
 
 == Веленть лемденть  ==
 
