*Empty MediaWiki Message*

--- a/Ирцедь_(Рудня_леень_верце_сянглей).mw
+++ b/Ирцедь_(Рудня_леень_верце_сянглей).mw
@@ -5,7 +5,7 @@
   |Эсьлем                 = 
  |Артовкс                 = 
   |артовксонть эйсте      = 
- |Кувалма                 = 22
+ |Кувалма                 =22
  |Площадь бассейна        =  125
  |Бассейн                 = Рудня лей/Ратор лей/Сура лей/Рав/Каспиянь иневедь
  |Ведень ютавтовкс        = 
@@ -23,18 +23,18 @@
   |Ёнкст                  = Мордовия Республикась
    |Буе                   = Ташто Шайгабуе
 }}
+'''Ирцедь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>''' (лиякс мерить: '''Ирцедь ляй'''<ref name="Память, запечатленная в слове"/>, {{Lang-ru|Ирсеть (нижний приток Рудни)}}) — кершёнонь [[Рудня лей|Рудня леенть]] сянглей, коната чуди [[Мордовия]]нь [[Ташто Шайгабуе]]ва ды [[Алоошонь ёнкс]]онь Починкань буева.
 
-'''Ирцедь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|Ирсеть (верхний приток Рудни)}}) — кершёнонь [[Рудня лей|Рудня леенть]] сянглей, коната чуди [[Мордовия]]нь [[Ташто Шайгабуе]]ва.
+Леенть кувалмозо 50 [[Вайгельбе|вп]], покшолмазо 381 вп².Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177550|title=Государственный водный реестр РФ: Ирсеть|archiveurl=http://www.webcitation.org/69C7O1VmU|archivedate=2012-07-16}}</ref> леенть пурнавкссо ([[Йока|Йока леенть]] пурнавксонзо теме). 
 
-Леенть кувалмозо 22 [[Вайгельбе|вп]], покшолмазо 125 вп².Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177514|title=Государственный водный реестр РФ: Ирсеть|archiveurl=http://www.webcitation.org/69C7Nb8iW|archivedate=2012-07-16}}</ref> леенть пурнавкссо ([[Йока|Йока леенть]] пурнавксонзо теме). 
-
-Леенть лангсо аштить<ref name="Память, запечатленная в слове"/> [[Темяжеле (Ташто Шайгабуе)|Темяжеле]], [[Ирсеть (Ташто Шайгабуе)|Ирсеть]], [[Вяльтерме (Ташто Шайгабуе)|Вяльтерме]], [[Краснай (Ташто Шайгабуе, Темяжелень)|Красновка]], [[Авгора (Ташто Шайгабуе)|Авгора]], [[Пушкино (Якстерекуро буе)|Пушкино]] велеть.
+Леенть лангсо аштить<ref name="Память, запечатленная в слове"/> [[Мельцаны (Ташто Шайгабуе)|Мельцаны]], [[Кулдым (Ташто Шайгабуе)|Кулдым]] велеть.
 
 == Леенть лемденть ==
-Гидронименть юрсо ашти '''ир''' суоми-угрань смусть<ref name="Память, запечатленная в слове"/> (ванодо, ({{Lang-kv|'''ир, ийр'''}}) - ({{Lang-ru|«омут, глубина»}}), омбоце пельксэсь тюрко-монголонь – '''сэдэ, сэдэс''' - ({{Lang-ru|«рукав реки»}})<ref>Мурзаев Э.М. Словарь народных географических терминов.  М.:  Мысль, 1974,  653 с. с. 536 {{Ref-ru}}</ref>).
+Лемесь саезь '''Ирцедь''' гидронименть эйстэ<ref name="Память, запечатленная в слове"/>.
 
 == Сёрм.: ==
 <references />
+
 
 
 {{stub}}
