--- a/Ирцедь_(Рудня_леень_алце_сянглей).mw
+++ b/Ирцедь_(Рудня_леень_алце_сянглей).mw
@@ -23,7 +23,7 @@
   |Ёнкст                  = Мордовия Республикась
    |Буе                   = Якстерекуро буе/Ташто Шайгабуе/Починкань буе
 }}
-'''Ирцедь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>''' (лиякс мерить: '''Ирцедь ляй'''<ref name="Память, запечатленная в слове"/>, {{Lang-ru|Ирсеть (нижний приток Рудни)}}) — кершёнонь [[Рудня лей|Рудня леенть]] сянглей, коната чуди [[Мордовия]]нь [[Ташто Шайгабуе]]ва ды [[Алоошонь ёнкс]]онь Починкань буева.
+'''Ирцедь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|Ирсеть (нижний приток Рудни)}}) — кершёнонь [[Рудня лей|Рудня леенть]] сянглей, коната чуди [[Мордовия]]нь [[Ташто Шайгабуе]]ва ды [[Алоошонь ёнкс]]онь Починкань буева.
 
 Леенть кувалмозо 50 [[Вайгельбе|вп]], покшолмазо 381 вп².Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177550|title=Государственный водный реестр РФ: Ирсеть|archiveurl=http://www.webcitation.org/69C7O1VmU|archivedate=2012-07-16}}</ref> леенть пурнавкссо ([[Йока|Йока леенть]] пурнавксонзо теме). 
 
