*Empty MediaWiki Message*

--- a/Кивчей_(Ташто_Шайгабуе).mw
+++ b/Кивчей_(Ташто_Шайгабуе).mw
@@ -43,7 +43,7 @@
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
-  |национальный состав    = [[мокшот]]
+  |национальный состав    = [[рузт]]
   |конфессиональный состав= 
   |этнохороним            = 
  |шкань каркс             = +3
