*Empty MediaWiki Message*

--- a/Кивчей_лей.mw
+++ b/Кивчей_лей.mw
@@ -29,7 +29,7 @@
 Кивчей лей лангсо аштить<ref name="Память, запечатленная в слове"/>: [[Верхний Кивчей (Ташто Шайгабуе)|Верхний Кивчей]], [[Кивчей (Ташто Шайгабуе)|Кивчей]], [[Заберезова (Якстерекуро буе)|Заберезова]], [[Долговерясы (Якстерекуро буе)|Долговерясы]], [[Краснофлотец (Кузбуе)|Краснофлотец]], [[Новоусадские Выселки (Кузбуе)|Новоусадские Выселки]], [[Лысая Гора (Кузбуе)|Лысая Гора]], [[Карасевка (Кузбуе)|Карасевка]], [[Желтоноговские Выселки (Кузбуе)|Желтоноговские Выселки]].
 
 == Леенть лемденть  ==
-Саеви: {{lang-mdf|''кив ~ кев''}} ({{lang-ru|«камень»}}) + {{lang-mdf|''чей (шяй)''}} ({{lang-ru|«болото»}})<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>. 
+Саеви: {{lang-mdf|''кив ~ кев''}} ({{lang-ru|«камень»}}) + {{lang-mdf|''чей (шяй)''}} ({{lang-ru|«болото»}})<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>. 
 
 == Сёрм.: ==
 <references />
