*Empty MediaWiki Message*

--- a/Ковач_лей.mw
+++ b/Ковач_лей.mw
@@ -23,7 +23,7 @@
    |Буе                   = Починкань буе (Алоошонь ёнкс)
 }}
 
-'''Ковач''' — лей Россиясо, чуди [[Алоошонь ёнкс|Алоошонь]] [[Починкань буе]]ва.  [[Муравей (Раторонь сянглей)|Муравей леенть]] витьёнонь сянглей.
+'''Ковач''' (эрицятне лемдить '''Кевец''') — лей Россиясо, чуди [[Алоошонь ёнкс|Алоошонь]] [[Починкань буе]]ва.  [[Муравей (Раторонь сянглей)|Муравей леенть]] витьёнонь сянглей.
 
 Леенть кувалмозо 13,8 [[Вайгельпе|вп]], покшолмазо — 91,7 вп². Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177480|title=Государственный водный реестр РФ: Ковач|archiveurl=http://www.webcitation.org/69C7PtJrx|archivedate=2012-07-16}}</ref> леенть пурнавкссо. 
 == Леенть лемденть ==
