*Empty MediaWiki Message*

--- a/Лямбирьбуе.mw
+++ b/Лямбирьбуе.mw
@@ -17,7 +17,7 @@
  | Статус                         = [[Муниципальной буе]]
  | Ашти                           = [[Мордовия Республикась|Мордовия]]со
  | Совавты                       = 16 мунициальной пурнавкст
- | Прявтош                        = [[Лямбирь (Лямбирьбуе)|Лямбирь веле]]
+ | Прявтош                        = [[Лямбирь веле (Лямбирьбуе)|Лямбирь веле]]
  | Путозь                    = [[1928 ие]]
  | Упразднение                    = 
 |Глава                            = Шамиль Фатихович Давыдов
