*Empty MediaWiki Message*

--- a/Лямбирьбуе.mw
+++ b/Лямбирьбуе.mw
@@ -1,3 +1,4 @@
+{{Лия смустьтне|Лямбирь (смустьтне)}}
 {{Регион
  | Цвет1                          = {{Цвет|Россия}}
  | Эрзянь лем                     = Лямбирьбуе
