*Empty MediaWiki Message*

--- a/Лямбирка_лей.mw
+++ b/Лямбирка_лей.mw
@@ -20,9 +20,9 @@
  |Леенть чиремксесь       = 
  |Мастор                  = Россия
   |Ёнкст                  = Мордовия Республикась 
-   |Буе                   = Оразайбуе
+   |Буе                   = Лямбирьбуе
 }}
-'''Лямбирка''' — лей [[Мордовия]]со, чуди [[Оразайбуе]]ва. [[Инесаро лей|Инесаро леень]] кершёнонь сянглей.
+'''Лямбирка''' — лей [[Мордовия]]со, чуди [[Лямбирьбуе]]ва. [[Инесаро лей|Инесаро леень]] кершёнонь сянглей.
 
 Кувалмозо 17 [[Вайгельпе|вп]], покшолмазо 66 вп². Леесь ушоды чудеманзо сёлтсто, Батраконь виренть вакссто, 4 вп чивалгомаёнов [[Лямбирь веле (Лямбирьбуе)|Лямбирь велестэнть]], юты веленть. Пры Инесаро лейс 73 вп кершёнонь чирева [[Суркино (Лямбирьбуе)|Суркино]] веленть вакссо.
 
