--- a/Лямбирь_веле_(Лямбирьбуе).mw
+++ b/Лямбирь_веле_(Лямбирьбуе).mw
@@ -62,7 +62,7 @@
 {{Лия смустьтне|Лямбирь (смустьтне)}}
 '''Лямбирь велесь''' ({{Lang-ru|Лямбирь}}) — [[печкаст|печкасонь]] веле [[Мордовия Республикась|Мордовия Республикасонть]], [[Лямбирьбуе|Лямбирьбуень]] куншка велесь. 
 
-Ашти [[Лябирька лей]]ненть лангсо.
+Ашти [[Лямбирка лей]]ненть лангсо.
 
 «Пензань губерниянь эрямо таркань потмоксонть» (1869) Лямбирь — казязь веле 174 кардаздо Саранонь уездстэ. Путозь-теезь 1642 [[ие|иестэ]] чополтонь печкастнесэ, конат састь чапомо Саранонь кемекстанть.
 
