*Empty MediaWiki Message*

--- a/Мессинговка.mw
+++ b/Мессинговка.mw
@@ -1,17 +1,82 @@
-Мессинговка ({{lang-de|Messing hof}}) - Лугаянонь районсо буе, эрзянь-рузонь буе.
+{{ЭТ
+ |статус                  = веле
+ |Эрзянь лем              = Мессинговка
+ |оригинальное название   =
+ |изображение             = 
+ |подчинение              = 
+ |мастор                  = Россия
+ |герб                    = 
+ |коцт                    = 
+ |описание герба          = 
+ |описание флага          = 
+ |ширина герба            = 
+ |ширина флага            = 
+  |lat_dir = |lat_deg = 54|lat_min = 59|lat_sec = 13
+  |lon_dir = |lon_deg = 44|lon_min = 10|lon_sec =52 
+  |CoordAddon             = 
+  |CoordScale             = 
+ |размер карты страны     = 
+ |размер карты региона    = 
+ |размер карты района     = 
+ |вид региона             = 
+ |регион                  = Алоошонь ёнкс
+ |регион в таблице        = Алоошонь ёнкс
+ |вид района              = буе
+ |район                   = Лугаян буе
+ |район в таблице         =
+ |вид общины              = 
+ |община                  = 
+ |община в таблице        = 
+ |внутреннее деление      = 
+ |вид главы               = 
+ |глава                   = 
+ |дата основания          = 
+ |первое упоминание       = 
+ |прежние имена           = 
+ |статус с                = 
+ |покшолмазо              = 
+ |вид высоты              = 
+ |высота центра НП        = 
+ |климат                  = 
+ |официальный язык        = 
+  |эрицятне               = 0<ref>[http://nizhstat.gks.ru/wps/wcm/connect/rosstat_ts/nizhstat/resources/33f515804f636dedaa6baf9b972d8349/ЧИСЛЕННОСТЬ++И++РАЗМЕЩЕНИЕ++НАСЕЛЕНИЯ+НИЖЕГОРОДСКОЙ+ОБЛАСТИ.rar Всероссийская перепись населения 2010 года. Численность и размещение населения Нижегородской области {{ref-ru}}]</ref>
+  |год переписи           =2010
+  |плотность              = 
+  |агломерация            = 
+  |национальный состав    = 
+  |конфессиональный состав= 
+  |этнохороним            = 
+ |часовой пояс            = +3
+ |DST                     = 
+ |телефонный код          = 	
+ |почтовый индекс         =607813
+ |почтовые индексы        = 
+ |автомобильный код       = 52, 152 
+ |вид идентификатора      = 
+ |цифровой идентификатор  = 
+ |категория в Commons     = 
+ |сайт                    = 
+ |язык сайта              = 
+}}
+'''Мессинговка'''  - веле [[Лугаян буе]]сэ, ашти [[Алоошонь ёнкс]]со.
 
-== История ==
-
-== Эрицят ==
-
+== Велень буелемть ==
 Печниковт, Пужаевт, Полаевт, Черемкинт, Деваевт, Исаевт.
 
-== Источникт ==
-* http://www.erzia.saransk.ru/arhiv.php?n=1307&nom11=228
-* http://wap.erzianj.b.qip.ru/?1-1-0-00000017-000-0-0-1303545817
-* http://www.mordva1000.ru/mordva-v-mire/58-mordva-v-rossii.html
-* http://wap.erzianraske.f.qip.ru/?1-19-0-00000001-000-0-0
-* http://www.erzia.saransk.ru/arhiv.php?n=2318&nom11=283
-* http://baza.vgdru.com/1/21303/
-* http://lukovzasocializm.narod.ru/2.html
-* http://obd-memorial.ru
+
+== Веленть лемденть  ==
+Смустезэ саеви ''Мессинг'' помещикенть эйстэ, кона кирдсь веленть.
+
+== Содавикс ломанть те велестэнть ==
+== Сёрм.: ==
+<references />
+* [http://www.erzia.saransk.ru/arhiv.php?n=1307&nom11=228 «Эрзянь мастор»: РОДНИК МОЕЙ ДУШИ ]{{ref-ru}}
+* [http://www.erzia.saransk.ru/arhiv.php?n=2318&nom11=283 «Эрзянь мастор»: РОССИЯ, КУДА ВЕДЕШЬ НАС !]{{ref-ru}}
+* [http://baza.vgdru.com/1/21303/ Генеалогическая база знаний: персоны, фамилии, хроника МЕССИНГ ]{{ref-ru}}
+
+
+
+
+[[Category:Алоошонь ёнксонь велеть|М]]
+[[Category:Лугаян буень велеть|М]]
+[[Category:Эрзянь велеть]]
