*Empty MediaWiki Message*

--- a/Кувай_(Ташто_Шайгабуе).mw
+++ b/Кувай_(Ташто_Шайгабуе).mw
@@ -58,8 +58,8 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-
-'''Кувай''' — рузонь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/1209 Геопортал РГО: д. Кивчей] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Ташто Шайгабуе]]сэ. 
+{{Лия смустьтне|Кувай (смустьтне)}}
+'''Кувай''' — рузонь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/1166 Геопортал РГО: п. Кувай] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Ташто Шайгабуе]]сэ. 
 
 
 == Веленть лемденть  ==
