*Empty MediaWiki Message*

--- a/Ташто_Шайгабуе.mw
+++ b/Ташто_Шайгабуе.mw
@@ -16,9 +16,9 @@
  | CoordScale                     = 
  | Статус                         = [[Муниципальной буе]]
  | Ашти                           = [[Мордовия Республикась|Мордовия]]со
- | Совавты                       = 27 мунициальной пурнавкст
+ | Совавты                        = 27 мунициальной пурнавкст
  | Прявтош                        = [[Сире Шайгав (Ташто Шайгабуе)|Сире Шайгав веле]]
- | Путозь                    = [[1928 ие]]
+ | Путозь                         = [[1928 ие]]
  | Упразднение                    = 
 |Глава                            = 
   |Название главы                  = Администрациянь прявт
@@ -32,11 +32,11 @@
  | Аббревиатура                   = 
  | ISO                            = 
  | FIPS                           = 
- | Телефонный код                 =83432
+ | Телефонный код                 = +783432
  | Почтовые индексы               = 
  | Интернет-домен                 = 
  | Код автомобильных номеров      = 13
- | Сайт                           =  
+ | Сайт                           =  http://rm-shaigovo.ru/
  | Категория в Commons            = 
  | Примечания                     = 
  | Название параметра1            = [[ОКАТО]]
