*Empty MediaWiki Message*

--- a/Пазялго.mw
+++ b/Пазялго.mw
@@ -60,3 +60,10 @@
  |язык сайта              = 
 }}
 '''Пазялго''' ({{Lang-ru|Пазелки}}) - велесь Бессоновонь буесэ [[Пенза ёнкс]]со.
+
+== Сёрм.: ==
+<references />
+
+[[Category:Пенза ёнксонь велеть|П]]
+[[Category:Бессоновонь буень велеть|П]]
+[[Category:Эрзянь велеть]]
