*Empty MediaWiki Message*

--- a/Шемышень_буе_(Пенза_ёнкс).mw
+++ b/Шемышень_буе_(Пенза_ёнкс).mw
@@ -14,11 +14,12 @@
 === Рузонь ===
 
 === Эрзянь ===
-* [[Арапина]]
+* [[Арапина (Шемышейбуе)|Арапина]]
+* [[Ташто Дёмкино веле]]
 
 === Мокшонь ===
 
 === Эрзянь ды мокшонь ===
-* [[Наскафтум]] (Наскафтым)
+* [[Наскафтум (Шемышейбуе)| Наскафтум ]] (Наскафтым)
 
 [[Category:Пенза ёнксонть буетне]]
