*Empty MediaWiki Message*

--- a/Ташто_Дёмкино_веле.mw
+++ b/Ташто_Дёмкино_веле.mw
@@ -1,3 +1,90 @@
-'''Ташто Дёмкино велесь''' — те эрзянь веле [[Пенза ёнкс|Пенза ёнкссонть]] [[Шемышейбуе|Шемышейбуесэ]].
+<br />
+{{ЭТ
+ |статус                  = веле
+ |Эрзянь лем              = Ташто Дёмкино
+ |оригинальное название   = {{Lang-ru|Старое Демкино}}
+ |изображение             = 
+ |подчинение              = 
+ |мастор                  = Россия Мастор
+ |герб                    = 
+ |коцт                    = 
+ |описание герба          = 
+ |описание флага          = 
+ |ширина герба            = 
+ |ширина флага            = 
+  |lat_dir = |lat_deg = 52|lat_min = 55|lat_sec = 03
+  |lon_dir = |lon_deg = 45|lon_min = 10|lon_sec = 24
+  |CoordAddon             = 
+  |CoordScale             = 
+ |размер карты страны     = 
+ |размер карты региона    = 
+ |размер карты района     = 
+ |вид региона             = Ёнкс
+ |регион                  = Пенза 
+ |регион в таблице        = Пенза ёнкс {{!}} Пенза
+ |вид района              = Буе
+ |район                   = Шемышеень
+ |район в таблице         = Шемышейбуе {{!}} Шемышеень
+ |вид общины              = 
+ |община                  = 
+ |община в таблице        = 
+ |внутреннее деление      = 
+ |вид главы               = велесь пряв
+ |глава                   = 
+ |дата основания          = 
+ |первое упоминание       = 1699 
+ |прежние имена           = 
+ |статус с                = 
+ |покшолмазо              = 
+ |вид высоты              = 
+ |высота центра НП        = 
+ |климат                  = 
+ |официальный язык        = 
+  |эрицятне               = 1029<ref name="inPenza">[http://inpenza.ru/shemysheyka/staroe_demkino.php  СТАРОЕ ДЁМКИНО (Старое Демкино) Шемышейского района Пензенской области] {{ref-ru}}</ref>
+  |год переписи           = 2004
+  |плотность              = 
+  |агломерация            = 
+  |национальный состав    = [[эрзят]]
+  |конфессиональный состав= 
+  |этнохороним            = 
+ |часовой пояс            = 
+ |DST                     = 
+ |телефонный код          = +7 841 59
+ |почтовый индекс         = 442448
+ |почтовые индексы        = 
+ |автомобильный код       = 58
+ |вид идентификатора      = ОКАТО 
+ |цифровой идентификатор  = {{ОКАТО|56259822001}}
+ |категория в Commons     = 
+ |сайт                    = 
+ |язык сайта              = 
+}}
+'''Ташто Дёмкино велесь'''  ({{Lang-ru|с. Старое Демкино}}) — эрзянь<ref name="inPenza"/> веле [[Пенза ёнкс|Пенза ёнкссонть]] [[Шемышейбуе]]сэ.
 
+Велеванть чудить Веж-Няньга ды Янго-Пря<ref name="Древности Пензенского края">Полубояров М.С. Древности Пензенского края в зеркале топонимики: М. Издательство «ФОН», 2010 – 224 с.  стр.145  ISBN 5-89022-094-2 {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> лейть.
+
+Кода лецтяви<ref name="Древности Пензенского края"/>:
+{{Цитатань ушодома}} ({{Lang-myv|[[1699 ие]]стэ лецтяви кода Демина веле, 1717 иестэ кода Демкина веле, 1723 иестэ эйсензэ 53 кудот-кардазт.)}}
+{{oq|ru|Основано ясачной мордвой одновременно с селом Старое Захаркино. Впервые упоминается в 1699 году как мордовская деревня Демина, в 1717 году – деревня Демкина ясачной мордвы, в 1723 году в ней 53 двора.}}
+{{Цитатань пе}}
+
+Эрицятнеде: [[1859 ие|1859]] – 1958 лом.,  [[1877 ие|1877]] – 2261, [[1884 ие|1884]] – 2772, [[1897 ие|1897]] – 3293, [[1914 ие|1914]] – 4306, [[1926 ие|1926]] – 3856, [[1959 ие|1959]] – 2161, [[1979 ие|1979]] – 1548, [[1989 ие|1989]] – 1232, [[1996 ие|1996]] – 1176 ломанть. 
+[[2004 ие]]нь [[якшамковонь 1 чи]] – 405 кудот-кардазт, 1029 лом.;
+
+== Веленть лемденть  ==
+Лемесь–антропоним<ref name="Древности Пензенского края"/>, саеви кезэрень эрзянь '''Дёма''', '''Дёмка''' лемтнестэ.
+
+== Содавикс ломанть те велестэнть ==
+* Волчёнкова Анна Родионовна<ref name="inPenza"/> — хирург, РФ-нь заслуженной врач (1983). 
+* Елаев Михаил Эммануилович<ref name="inPenza"/> — хирург, РСФСР-нь заслуженной врач (1964)
+
+== Веленть эрямозо  ==
+Улить [[чувтт|чувтосто]] церькува, кевень юрт лангсо ({{Lang-ru|Храм во имя свт. и чуд. Николая}}), ульнесь путозь-стявтозь [[1859 ие]]стэ.
+Таркат<ref name="Древности Пензенского края"/>: '''Пуринáтка''' — латко лисьмапря марто, саеви {{Lang-myv|'''пуре'''}} - ({{Lang-ru|«хмельной напиток для языческих ритуалов»}}) + {{Lang-myv|'''латко'''}} - ({{Lang-ru|«овраг»}}). Неень шкасто тесэ ютавтыть «Пуре латко»<ref name="Erzäks.ru">[http://erzyaks.ru/myv/yutas-erzyaks-pure-latko-2016/ Erzäks.ru // Ютась эрзякс «Пуре латко – 2016»]{{ref-ru}}, {{ref-myv}}, {{ref-eng}}</ref><ref name="Администрация">[http://shem.pnzreg.ru/news/2016/06/27/15083978  Администрация Шемышейского района официальный сайт // Прошел районный национально-культурный праздник «Пуре Латка»]{{ref-ru}}</ref>покшчи.
+
+== Сёрм.: ==
+<references />
+
+[[Category:Пенза ёнксонь велеть|Т]]
+[[Category:Шемышейбуень велеть|Т]]
 [[Category:Эрзянь велеть]]
