--- a/Лямбирь_веле_(Лямбирьбуе).mw
+++ b/Лямбирь_веле_(Лямбирьбуе).mw
@@ -62,9 +62,14 @@
 {{Лия смустьтне|Лямбирь (смустьтне)}}
 '''Лямбирь велесь''' ({{Lang-ru|Лямбирь}}) — [[печкаст|печкасонь]] веле [[Мордовия Республикась|Мордовия Республикасонть]], [[Лямбирьбуе|Лямбирьбуень]] куншка велесь. 
 
-Ашти [[Лямбирка лей]]ненть лангсо.
+Ашти [[Лямбирка лей]]ненть лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|''([[1869 ие|1869]]) Лямбирь — казязь веле 174 кардаздо Саранонь уездстэ.''.}}
+{{oq|ru|В «СНМ Пензенской губернии» (1869) – Лямбирь, село из 174 дворов   Саранского уезда.}}
+{{Цитатань пе}}
+Путозь-теезь [[1642 ие|иестэ]] чополтонь печкастнесэ, конат састь чапомо Саранонь кемекстанть.
 
-«Пензань губерниянь эрямо таркань потмоксонть» (1869) Лямбирь — казязь веле 174 кардаздо Саранонь уездстэ. Путозь-теезь 1642 [[ие|иестэ]] чополтонь печкастнесэ, конат састь чапомо Саранонь кемекстанть.
+== Веленть лемденть  ==
+Лемесь–гидроним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>.
 
 == Сёрм.: ==
 <references />
