*Empty MediaWiki Message*

--- a/Кувай_(Ташто_Шайгабуе).mw
+++ b/Кувай_(Ташто_Шайгабуе).mw
@@ -61,15 +61,19 @@
 {{Лия смустьтне|Кувай (смустьтне)}}
 '''Кувай''' — рузонь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/1166 Геопортал РГО: п. Кувай] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Ташто Шайгабуе]]сэ. 
 
+Ашти [[Шалма лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|''([[1931 ие|1931]]) – Красный Кувай, посёлка 9 кудот-кардазт Леткинэнь вельсоветсэ''.}}
+{{oq|ru|«СНП Средне-Волжского края» (1931) – Красный Кувай, поселок из 9 дворов  Леткинского сельсовета.}}
+{{Цитатань пе}}
 
+Эрицятнеде: [[2002 ие]]стэ ульнесь 15 лом., 2010 иень ловномасонть - 9 ломанть.  
 == Веленть лемденть  ==
- 
+Лемесь–характеристика. Саеви  ({{Lang-mdf|}} ды {{Lang-myv|'''кувака'''}}) ({{Lang-ru|«длинный, долгий»}})<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref> валстонть. 
+
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
-
 == Сёрм.: ==
 <references />
-
 
 [[Category:Мордовиянь велеть|К]]
 [[Category:Ташто Шайгабуень велеть|К]]
