*Empty MediaWiki Message*

--- a/Кувай_(Ташто_Шайгабуе).mw
+++ b/Кувай_(Ташто_Шайгабуе).mw
@@ -68,7 +68,7 @@
 
 Эрицятнеде: [[2002 ие]]стэ ульнесь 15 лом., 2010 иень ловномасонть - 9 ломанть.  
 == Веленть лемденть  ==
-Лемесь–характеристика. Саеви  ({{Lang-mdf|}} ды {{Lang-myv|'''кувака'''}}) ({{Lang-ru|«длинный, долгий»}})<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref> валстонть. 
+Лемесь–характеристика. Саеви  ({{Lang-mdf|}} ды {{Lang-myv|'''кувака'''}}) ({{Lang-ru|«длинный, долгий»}})<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref> валстонть. Лия смусть:({{Lang-mdf|кувика ляй}}) - ({{Lang-ru|«долгий, длинный овраг с источником»}})<ref name="ГЕОПОРТАЛ"/>. 
 
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
