--- a/Верякуши_(Ташто_Шайгабуе).mw
+++ b/Верякуши_(Ташто_Шайгабуе).mw
@@ -59,7 +59,7 @@
  |язык сайта              = 
 }}
 <!-- {{Лия смустьтне|Верякуши (смустьтне)}} -->
-'''Верякуши''' — рузонь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/1166 Геопортал РГО: п. Кувай] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Ташто Шайгабуе]]сэ. 
+'''Верякуши''' — рузонь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/1205 Геопортал РГО: с. Верякуши] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Ташто Шайгабуе]]сэ. 
 
 Эрицятнеде: [[2002 ие]]стэ ульнесь 61 лом., 2010 иень ловномасонть - 17 ломанть.  
 == Веленть лемденть  ==
