*Empty MediaWiki Message*

--- a/Пазялго.mw
+++ b/Пазялго.mw
@@ -40,8 +40,8 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 790
-  |год переписи           = 2011
+  |эрицятне               = 888<ref name="inPenza"/>
+  |год переписи           = 2004
   |плотность              = 
   |агломерация            = 
   |национальный состав    = [[эрзят]], [[рузт]]
@@ -59,7 +59,20 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Пазялго''' ({{Lang-ru|Пазелки}}) - велесь Бессоновонь буесэ [[Пенза ёнкс]]со.
+{{Лия смустьтне|Пазялго (смустьтне)}}
+'''Пазялго''' ({{Lang-ru|Пазелки}}) — эрзянь<ref name="inPenza">[http://inpenza.ru/bessonovka/pazelki.php  inPenza: ПАЗЕЛКИ (Мурзы) Бессоновского района Пензенской области] {{ref-ru}}</ref><ref name="Пенза-пресс">[http://penza-press.ru/lenta-novostey/60046/gostej-erzyanskogo-prazdnika-v-pazelkah-ugostyat-selyankoj  Пенза-пресс: Гостей эрзянского праздника в Пазелках угостят селянкой	(видео)] {{ref-ru}}</ref> велесь Бессоновонь буесэ [[Пенза ёнкс]]со.
+
+Аншти Пазелки лей<ref name="Древности Пензенского края">Полубояров М.С. Древности Пензенского края в зеркале топонимики: М. Издательство «ФОН», 2010 – 224 с.  стр.145  ISBN 5-89022-094-2 {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> лангсо. Велесь путозь-стявтозь [[1689 ие]]де седе икеле. 
+
+
+Эрицятнеде: [[1877 ие|1877]] – 2222 лом., [[1897 ие|1897]] – 2964 лом., [[1926 ие|1926]] – 3134 лом., [[1930 ие|1930]] – 2935 лом., [[1959 ие|1959]] – 1915 лом., [[1979 ие|1979]] – 1120 лом., [[1989 ие|1989]] – 1029 лом., [[1996 ие|1996]] – 965 лом., [[2004 ие|2004]] – 888 ломанть. 
+
+== Веленть лемденть  ==
+Лемесь–гидроним<ref name="Древности Пензенского края"/>.
+
+== Содавикс ломанть те велестэнть ==
+== Веленть эрямозо  ==
+Неень шкасто тесэ ютавтыть '''«Покш эрзянь чи»'''<ref name="Erzäks.ru">[http://erzyaks.ru/kulturno-obrazovatelnaya-programma-tvorchestvo-erzi-glazami-detej-uspeshen-v-estonii/ Erzäks.ru // «Большой Эрзянский день» в Пензенской области]{{ref-ru}}</ref><ref name="Пенза-пресс2">[http://www.penza-press.ru/lenta-novostey/98006/penzency-primut-uchastie-v-bolshom-erzyanskom-dne   Пенза-пресс: Пензенцы примут участие в «Большом Эрзянском дне» (видео)]{{ref-ru}}</ref>.
 
 == Сёрм.: ==
 <references />
