*Empty MediaWiki Message*

--- a/Ташто_Дёмкино_веле.mw
+++ b/Ташто_Дёмкино_веле.mw
@@ -68,7 +68,7 @@
 {{oq|ru|Основано ясачной мордвой одновременно с селом Старое Захаркино. Впервые упоминается в 1699 году как мордовская деревня Демина, в 1717 году – деревня Демкина ясачной мордвы, в 1723 году в ней 53 двора.}}
 {{Цитатань пе}}
 
-Эрицятнеде: [[1859 ие|1859]] – 1958 лом.,  [[1877 ие|1877]] – 2261, [[1884 ие|1884]] – 2772, [[1897 ие|1897]] – 3293, [[1914 ие|1914]] – 4306, [[1926 ие|1926]] – 3856, [[1959 ие|1959]] – 2161, [[1979 ие|1979]] – 1548, [[1989 ие|1989]] – 1232, [[1996 ие|1996]] – 1176 ломанть. 
+Эрицятнеде: [[1859 ие|1859]] – 1958 лом.,  [[1877 ие|1877]] – 2261 лом., [[1884 ие|1884]] – 2772 лом., [[1897 ие|1897]] – 3293 лом., [[1914 ие|1914]] – 4306 лом., [[1926 ие|1926]] – 3856 лом., [[1959 ие|1959]] – 2161 лом., [[1979 ие|1979]] – 1548 лом., [[1989 ие|1989]] – 1232 лом., [[1996 ие|1996]] – 1176 ломанть. 
 [[2004 ие]]нь [[якшамковонь 1 чи]] – 405 кудот-кардазт, 1029 лом.;
 
 == Веленть лемденть  ==
