--- a/Пазялго.mw
+++ b/Пазялго.mw
@@ -44,7 +44,7 @@
   |год переписи           = 2004
   |плотность              = 
   |агломерация            = 
-  |национальный состав    = [[эрзят]], [[рузт]]
+  |национальный состав    = [[эрзят]]
   |конфессиональный состав= 
   |этнохороним            = 
  |часовой пояс            = 
@@ -72,6 +72,7 @@
 
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
+Велесэнть ули [[чувтт|чувтосто]] церькува ({{Lang-ru|Храм Рождества Христова}}), ульнесь путозь-стявтозь [[1888 ие]]стэ.
 Неень шкасто тесэ ютавтыть '''«Покш эрзянь чи»'''<ref name="Erzäks.ru">[http://erzyaks.ru/kulturno-obrazovatelnaya-programma-tvorchestvo-erzi-glazami-detej-uspeshen-v-estonii/ Erzäks.ru // «Большой Эрзянский день» в Пензенской области]{{ref-ru}}</ref><ref name="Пенза-пресс2">[http://www.penza-press.ru/lenta-novostey/98006/penzency-primut-uchastie-v-bolshom-erzyanskom-dne   Пенза-пресс: Пензенцы примут участие в «Большом Эрзянском дне» (видео)]{{ref-ru}}</ref>.
 
 == Сёрм.: ==
