*Empty MediaWiki Message*

--- a/Пазялго.mw
+++ b/Пазялго.mw
@@ -73,7 +73,7 @@
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
 Велесэнть ули [[чувтт|чувтосто]] церькува ({{Lang-ru|Храм Рождества Христова}}<ref name="inPenza"/>), ульнесь путозь-стявтозь [[1888 ие]]стэ.
-Неень шкасто тесэ ютавтыть '''«Покш эрзянь чи»'''<ref name="Erzäks.ru">[http://erzyaks.ru/kulturno-obrazovatelnaya-programma-tvorchestvo-erzi-glazami-detej-uspeshen-v-estonii/ Erzäks.ru // «Большой Эрзянский день» в Пензенской области]{{ref-ru}}</ref><ref name="Пенза-пресс2">[http://www.penza-press.ru/lenta-novostey/98006/penzency-primut-uchastie-v-bolshom-erzyanskom-dne   Пенза-пресс: Пензенцы примут участие в «Большом Эрзянском дне» (видео)]{{ref-ru}}</ref>.
+Неень шкасто тесэ ютавтыть '''«Покш эрзянь чи»'''<ref name="Erzäks.ru">[http://erzyaks.ru/kulturno-obrazovatelnaya-programma-tvorchestvo-erzi-glazami-detej-uspeshen-v-estonii/ Erzäks.ru // «Большой Эрзянский день» в Пензенской области]{{ref-ru}}</ref><ref name="Пенза-пресс2">[http://www.penza-press.ru/lenta-novostey/98006/penzency-primut-uchastie-v-bolshom-erzyanskom-dne   Пенза-пресс: Пензенцы примут участие в «Большом Эрзянском дне» (видео)]{{ref-ru}}</ref> ([[2015 ие]]стэ сон ульнесь сисемецекс<ref name="«Чилисема»">[http://chilisema.ru/upload/iblock/a2b/7-15-ilovepdf-compressed.pdf «Чилисема» No7 (446) 2015: САДО, ЭРЗЯТ, ВЕСЕ САДО!]{{ref-myv}}</ref>). 
 
 == Сёрм.: ==
 <references />
