*Empty MediaWiki Message*

--- a/Пазялго_(смустьтне).mw
+++ b/Пазялго_(смустьтне).mw
@@ -4,7 +4,7 @@
 * [[Пазялго]] — эрзянь веле Бессоновонь буесэ [[Пенза ёнкс]]со.
 
 ;Гидроним
-*[[Пазелки лей]]  – лей, [[Вадолей|Вадоляень]] сянглей.е Сыреси (Ицял буе)|Береговые Сыреси]] велетнесэ.
+*[[Пазелки лей]]  – лей, [[Вадолей|Вадоляень]] сянглей.
 
 __DISAMBIG__
 
