*Empty MediaWiki Message*

--- a/Вадолей.mw
+++ b/Вадолей.mw
@@ -1,5 +1,5 @@
 {{Лей
- |Лем                     = Вадолей
+ |Лем                     = Вадоляй
   |Эсьлем                 = ru/Вад
  |Артовкс                 = 
   |артовксонть эйсте      = 
@@ -22,7 +22,7 @@
    |Буе                   = 
 }}
 {{Лия смустьтне|Вад (смустьтне)}}
-'''Вадолей''' ({{lang-ru|Вад}}) —  лей, чудиця [[Пензань ёнкс]]о, [[Мордовия Республикась|Мордовиясо]] ды [[Рязанень ёнкс]]о. [[Мокша лей|Мокша леень]] кершёнонь сянглей.
+'''Вадоляй'''<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref> ({{lang-ru|Вад}}) —  лей, чудиця [[Пензань ёнкс]]о, [[Мордовия Республикась|Мордовиясо]] ды [[Рязанень ёнкс]]о. [[Мокша лей|Мокша леень]] кершёнонь сянглей.
 
 Кувалмозо  222  [[Вайгельпе|вп]], покшолмозо весемезэ 6500 тёж. вп². 
 == Вадолеень сянголейтне (вп прамсто)==
