--- a/«Масторавань_морот».mw
+++ b/«Масторавань_морот».mw
@@ -7,8 +7,12 @@
 [[Седямо-морамось|Седямо-морамо]] невтема пурнавксонь читнестэ ютавтови эйкакштнэнь туртов конкурс «Эрзянь моро — пингеде пингес»; невтевить ломанень кедьсэ теезь теевксэст ды артыцятнень артовксост, ташто коень-эрямонь [[Авань оршамопелэст|оршавкстнэ]], [[Ярсамопель|ярсамопелькстнэ]]. Седямо-морамо невтема пурнавкссонть пряст невтить кода покш ломанть ([[15 (ловома вал)|15-с]] саезь), истя жо [[10 (ловома вал)|10]]-[[12 (ловома вал)|12]] эйкакшонь фольклоронь пурнавкст, [[Мордовия Республикась|Мордовия]] ёнкссто инжеть ды лият. Седямо-морамо невтеманть пурнавксонть тештекс-символокс ловови эрзянь оршамосо чувтонь теевкс — матрёшка, конань эрьва разнэ буйтне явить эсь ютковаст, ды конане мерить '''эрзява'''.
 
 Седямо-морамо невтема пурнавксось ютавтозель: [[Од Малыклань буе|Од Малыклань]] (1992, 1999), [[Инзейбуе|Инзей]] (1994), [[Вешкайбуе|Вешкай]] (1995), [[Кузоватонь буе|Кузоватонь]] (1996, 2007), [[Паволонь буе|Паволонь]] (1997), [[Суронь буе|Суронь]] (2000), [[Николаень буе|Николаень]] (2001) буйтнесэ.
+[[2015 ие]]стэ сон ульнесь Кузоватбуень Кивать велесэ<ref name="«Чилисема»">[http://chilisema.ru/upload/iblock/a2b/7-15-ilovepdf-compressed.pdf «Чилисема» No7 (446) 2015: МАСТОРАВАНЬ МОРОТ]{{ref-myv}}</ref>.
+
 
 == Налткеть ==
 * [http://ulianovsk.ru/wiki/Масторавань_морот «Масторавань морот» (ulianovsk.ru)] {{Ref-ru}}
 
+== Сёрм.: ==
+<references />
 [[Category:Ульянонь ёнкс|М]]
