*Empty MediaWiki Message*

--- a/Самар_ош.mw
+++ b/Самар_ош.mw
@@ -1,7 +1,7 @@
 <br/>
 {{ЭТ
  |статус                  = Ош
- |Эрзянь лем              = Самар
+ |Эрзянь лем              = Самар ош<ref name="«Сятко»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74412/Syatko_1931_no_1.pdf?sequence=1 «Сятко» No1 (24), Январь 17 чи 1931: Самар ош]{{ref-myv}}</ref>
  |оригинальное название   = Самара
  |изображение             = 
  |подчинение              = 
@@ -61,4 +61,7 @@
 }}
 '''Самар''' - покш ош Россиясо.
 
+
+== Сёрм.: ==
+<references />
 [[Категория:Россия Масторонть ошт]]
