*Empty MediaWiki Message*

--- a/Маар.mw
+++ b/Маар.mw
@@ -12,5 +12,10 @@
 
 Кезерень шкане Покштянок терявтнесть теемс истят Маарт, Масторост весе буетнесэ. Мекс те эрявсь? Нама чарькодицясь-чарькодьсы. Ваньскавтомс весе Масторонть теемс вейке, вейсэнь раськень эрямо пандо-пакся. Кемекстамс-вейсэндямс буетнень, теемс кеме Раське ды Мастор, Чаньстямс тень Инешкипазонть Эрьмесэ, Покштятнень-Покшаватнень эрямо содамочинть сюпавчисэ, ды Пертьпельксэнть эвстьнень-вийтнень ёнксонь кирдийтнень-аштийтнень лезэчинь кандомасост.
 
+== Маар шкинемасо ==
+* [[Илька Морыця]] '''«Ине-Мар Аля»''' валморо. Сёрмадозь [[1931 ие]]  [[якшамковонь 21 чи]]стэ - эйсэнзэ Ине-Мар Яля — те [[Ленин, Владимир Ильич|Ленин]]; '''Мар''' — марсо (ве таркасо, куцясо) — покш курганонь (губоронь—пандонь) лем<ref name="«Сятко»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74412/Syatko_1931_no_1.pdf?sequence=1 «Сятко» No1 (24), Январь 17 чи 1931: Эрзянь кель - валось, лоп. 24 ]{{ref-myv}}</ref>.
+ 
 
+== Сёрм.: ==
+<references />
 [[Category:Эрзянь озкст|М]]
