*Empty MediaWiki Message*

--- a/Поводеле_(Тумобуе).mw
+++ b/Поводеле_(Тумобуе).mw
@@ -81,6 +81,14 @@
 == Веленть эрямозо  ==
 1930 иень ушодомсто ульнесь теезь вейсхоз, 1997 иестэ  — Ленинэнь лемсэ вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК им. Ленина}}). Неень шкасто велесэнть — лувонь школа, школа-интернат, 4 ловномакудот, Пакшань-одломанень спортонь школа ({{Lang-ru|ДЮСШ}}), спортонь клуб, 2 ведьгевть. 
 
+== Поводвеледе шкинемасо  ==
+* веледенть [[Сятко (журнал-ковставкс)|«Сятко» ковставксо]] ульнесь сёрмадозь<ref name="«Сятко»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74412/Syatko_1931_no_1.pdf?sequence=1 «Сятко» No1 (24), Январь 17 чи 1931: КАЛЯЗЬ ПЕРАСО, лоп. 15 ]{{ref-myv}}</ref>: 
+{{Цитатань ушодома}} ({{Lang-myv|''Повадь велесэ (Дубенкань р-н мокшэр. обл.) Спиридонов Степан ялганзо маро куйсь иредьстэ йерькува прясь ды ердызь баягатнень. Шумонтень чийсь народ, а Степа апак тандат ирецтэнзэ пачк каявсь ломатне ланкс ды давай кинь понксь тапамо. Те вана Спиридоновонь койсе антирелигиозной робута. Цярахман''.}})
+{{Цитатань пе}}
+  
+
+
+
 == Сёрм.: ==
 <references />
 
