*Empty MediaWiki Message*

--- a/Козловка_(Отяжбуе).mw
+++ b/Козловка_(Отяжбуе).mw
@@ -2,7 +2,7 @@
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Кузлома
- |оригинальное название   = <!-- {{Lang-ru|Козловка}}-->
+ |оригинальное название   = {{Lang-ru|Козловка}}
  |изображение             = 
  |подчинение              = 
  |мастор                  = Россия
@@ -59,7 +59,38 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Кузлома''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+'''Кузлома'''<ref name="Память, запечатленная в слове"/> ({{Lang-ru|Козловка}}) — эрзянь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref> веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+
+Ашти [[Вежня лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|''[[1863 ие|1863]] – Козловка веле 105 кудот-кардазт Ордань уездсэ.''}}
+{{oq|ru|В «СНМ Симбирской губернии» (1863) – Козловка, село из 105 дворов  Ардатовского уезда.}}
+{{Цитатань пе}}
+
+== Веленть лемденть  ==
+Лемесь саеви: ({{Lang-myv|'''куз'''}}) - ({{Lang-ru|«ель»}}) + ({{Lang-myv|'''лём (лом)'''}}) - ({{Lang-ru|«черемуха»}})<ref name="Память, запечатленная в слове"/>.
+
+== Содавикс ломанть те велестэнть ==
+Поводелесэ чачсть:
+* [[Калинкин, Анатолий Григорьевич|Анатолий Калинкин]]<ref>[http://www.kino-teatr.ru/teatr/acter/m/ros/388665/bio/ Кино-театр.ру АНАТОЛИЙ КАЛИНКИН {{Ref-ru}}]]</ref>— Мордовиянь седямонь театрань актёр
+* В. Ф. Здунов<ref>[http://bd-chelarhiv.eps74.ru/kniga/foto.files/p0000017.jpg.htm Книга памяти Челябинской области: Здунов Василий Федорович{{Ref-ru}}]]</ref> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+* О. В. Кукушкин<ref>[http://saransk.ruc.su/about/scientists_and_teachers/zolotoy-fond-instituta.php Российский университет кооперации. Золотой фонд института  {{Ref-ru}}]]</ref> — ({{Lang-ru|декан Российского университета кооперации}})  
+* Н. А. Суняева<ref>[http://www.litrossia.ru/archive/item/7661-memuary-moej-babushki Литературная Россия. МЕМУАРЫ МОЕЙ БАБУШКИ {{Ref-ru}}]]</ref>— сёрмадей  
+
+== Веленть эрямозо  ==
+1931 —1953 иетнестэ паншсть  тонавтома училища, больниця, лавка, ульнесь теезь вейсхозт «Ленинэнь киява» ({{Lang-ru|«По ленинскому пути»; с. Козловка}}), Коминтерна лемсэ ([[Пилезеле (Отяжбуе)|с. Пилесево]]), Будённоень лемсэ ([[Сайнеле (Отяжбуе)|д. Санеевка]]), Чапаевень лемсэ ([[Фёдоровка (Отяжбуе)|д. Фёдоровка]]). 1992 иестэ вейсхозось Коминтерна лемсэ ульнесь  теезь «Козловский» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Козловский»}}). Нень шкасто ЗАО «Агро-Козловка»<ref>[http://agro.e-mordovia.ru/organizcii/selpredapk_atyashevo.php Министерство сельского хозяйства и продовольствия РМ. Сельхозпредприятия АПК: Атяшевский район {{Ref-ru}}]]</ref>. 
+
+Неень шкасто велесэнть — лувонь школа, больниця, Шкинема  Кудо ды ловнома кудо.
+Веленть авасоло ули эрзянь калмо XVII —XVIII пп. 
+
+== Кузлома веледе шкинемасо  ==
+* веледенть [[Сятко (журнал-ковставкс)|«Сятко» ковставксо]] ульнесь сёрмадозь<ref name="«Сятко»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74412/Syatko_1931_no_1.pdf?sequence=1 «Сятко» No1 (24), Январь 17 чи 1931: КАЛЯЗЬ ПЕРАСО, лоп. 15 ]{{ref-myv}}</ref>(сёрмадома лувось ды стилистикась кадозь): 
+{{Цитатань ушодома}} ({{Lang-myv|''Козловка велесэ (Ятяшевань р-н. Мокш- эрз. обл.) робутыть машинно тракторной курст, конатнесэ тонавтне 120 ломань.<br />
+Курсантнэнь андыть столовойсо конань колияк а шлякшнысызь ды а уштнисызь. Курсатнэ обедыть рудаз поцо ды варьгасо. Столовоень заведующиентень Крандасовнэнь куть иля кортаяк. Врачнэ тожо а ванныть столовоенть мельга а варштамс бу эряволь. Фин.''}})
+{{Цитатань пе}}
+  
+== Сёрм.: ==
+<references />
+
 
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
