--- a/Радаев,_Василий_Кузьмич.mw
+++ b/Радаев,_Василий_Кузьмич.mw
@@ -23,7 +23,7 @@
  |википурнавкс         = 
 }}
 {{Лия смустьтне|Радаев (смустьтне)}}
-'''Радаевень Василий Кузьмич''' ( [[1907]] [[эйзюрковонь 13 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] Похвистневань буень [[Покш Толкан веле (Похвистнева буень)|Покш Толкан веле]]сэ - [[1991]] [[ацамковонь 6 чи]] [[Саранск]]) — [[Эрзя|эрзянь]]<ref> Бектяшкина Т. Сияжар, косто саят эсь ундоксот? // Сятко. – 2001. – 2№. – С. 111–113</ref> сёрмадей, фольклоронь пурныця.
+'''Радаевень Василий Кузьмич''' ( [[1907]] [[эйзюрковонь 13 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] Похвистневань буень [[Покш Толкан веле (Похвистнева буень)|Покш Толкан веле]]сэ<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]]</ref> - [[1991]] [[ацамковонь 6 чи]] [[Саранск]]) — [[Эрзя|эрзянь]]<ref> Бектяшкина Т. Сияжар, косто саят эсь ундоксот? // Сятко. – 2001. – 2№. – С. 111–113</ref> сёрмадей, фольклоронь пурныця.
 
 ==Эстедензэ==
 Рабфаконть прядомадонзо мейле тонавтнесь Ленинградонь госуниверситетсэ, конань прядынзе [[1934]] иестэ. Ине Отечествань Войнассо улиця. 1966 иесте саезь СССР-нь Сёрмадеень вейсендявксос совиця. Мордовиянь Государственной премиянь Лауреат (1979), раськень сёрмадей Мордовиянь (1980).
