--- a/Радаев,_Василий_Кузьмич.mw
+++ b/Радаев,_Василий_Кузьмич.mw
@@ -26,7 +26,7 @@
 '''Радаевень Василий Кузьмич''' ( [[1907]] [[эйзюрковонь 13 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] Похвистневань буень [[Покш Толкан веле (Похвистнева буень)|Покш Толкан веле]]сэ<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]]</ref> - [[1991]] [[ацамковонь 6 чи]] [[Саранск]]) — [[Эрзя|эрзянь]]<ref> Бектяшкина Т. Сияжар, косто саят эсь ундоксот? // Сятко. – 2001. – 2№. – С. 111–113</ref> сёрмадей, фольклоронь пурныця.
 
 ==Эстедензэ==
-Рабфаконть прядомадонзо мейле тонавтнесь Ленинградонь госуниверситетсэ, конань прядынзе [[1934]] иестэ. Ине Отечествань Войнассо улиця. 1966 иесте саезь СССР-нь Сёрмадеень вейсендявксос совиця. Мордовиянь Государственной премиянь Лауреат (1979), раськень сёрмадей Мордовиянь (1980).
+Рабфаконть прядомадонзо мейле тонавтнесь Ленинградонь госуниверситетсэ<ref>[http://www.mordovmedia.ru/poster/8230/ «Фронтовик, писатель» Выставка, посвященная В.К. Радаеву {{Ref-ru}}]</ref>, конань прядынзе [[1934]] иестэ. Ине Отечествань Войнассо улиця. 1966 иесте саезь СССР-нь Сёрмадеень вейсендявксос совиця. Мордовиянь Государственной премиянь Лауреат (1979), раськень сёрмадей Мордовиянь (1980).
 
 == Сёрмадовксонзо ==
 Васенце валморозо «Пастухонь думат» лиссь «Якстере теште» кулялопасо. Комсеце иетнестэ [[XX]] пингенть Радаев В. К. седе сеедьстэ кармась сёрмалеме кулялопатнева «Од ломанень вайгель» ({{lang-ru|«Голос молодежи»}}), «Од велесь» ({{lang-ru|«Молодая деревня»}}) ды «Кажочись» ({{lang-ru|«Беднота»}}). Сёрмады художественной сёрмадовкст тиринь [[Эрзянь кель|эрзянь кельсэ]]. Эсензэ войнань икелень сёрмадовкстнэсэ-тевкстнэсэ, ёвтамотнесэ, валморотнесэ сёрмадеесь ёвтни одкстоматнеде велесэ, лиякстоматнеде потмо ёжосо модань важодицятнень, од прогрессэнь теевкстнеде, конат сюлмавтыть ды кемекстыть советэнь масторонть. 
